--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,13 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
+<div class="container" style="margin-top: 100px">
+
+</div>
+
+<!-- <ul>
     <li *ngFor="let user of users">
             {{user.id}} - {{user.userName}}
     </li>
-</ul>
+</ul> -->
+
+<app-home></app-home>
