--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <img src="{{member.photoUrl || './assests/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumnail">
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumnail">
             <div class="card-body">
                 <div>
                     <strong>Location: </strong>
