--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -19,14 +19,13 @@
                     <strong>Age: </strong>
                     <p>{{member.age}}</p>
                 </div>
-                <div>    this.toastr.success("Profile updated Successfully");
-                    this.editForm?.reset(this.member);
+                <div> 
                     <strong>Last active: </strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive + 'Z' | timeago }}</p>
                 </div>
                 <div>
                     <strong>Member since: </strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date: 'dd MMM yyyy'}}</p>
                 </div>
                 <div class="card-footer">
                     <button type="submit" [disabled]="!editForm.dirty" form="editForm" class="btn btn-success col-12">Save changes</button>
